using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimationStrings 
{
    internal static string isMoving = "isMoving";

    internal static string isRunning = "isRunning";

    internal static string jump = "jump";

    internal static string attack = "attack";

    internal static string rangedAttack = "rangedAttack";

    internal static string isGrounded = "isGrounded";

    internal static string yVelocity = "yVelocity";

    internal static string isOnWall = "isOnWall";

    internal static string isOnCelling = "isOnCelling";

    internal static string canMove = "canMove";

    internal static string hasTarget = "hasTarget";

    internal static string isAlive = "isAlive";

    internal static string isHit = "isHit";

    internal static string attackCooldown = "attackCooldown";

}
